Fix: Widget WP Search - Button and text input are not aligned [ED-2178] (#152)

--- a/assets/scss/theme/_general.scss
+++ b/assets/scss/theme/_general.scss
@@ -84,3 +84,10 @@ to override any of the settings in this section, add your styling code in the cu
 .bypostauthor {
 	font-size: inherit;
 }
+
+// Specific style for 'wp search' widget: same alignment for the button and label elements.
+.elementor-widget-wp-widget-search {
+	.search-submit {
+		vertical-align: middle;
+	}
+}
